--- a/HTML/admin.html
+++ b/HTML/admin.html
@@ -6,11 +6,11 @@
     <title>Literary Haven//Admin Page</title>
     <!-- Links to Google fonts -->
 
-    <!-- Links to Noto Sans Japanese Font Type -->
+    <!-- Links to Monserrat Font Type -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300&family=Noto+Serif+JP:wght@200;300;400;500;600;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,200;1,300&display=swap"
       rel="stylesheet"
     />
 
