--- a/index.html
+++ b/index.html
@@ -76,6 +76,15 @@
       </nav>
     </header>
     <main>
+        <div class="indexBackground">
+            <div class="indexText row text-center">
+                <p class="indexSlogan1">Striving to satisfy your literally cravings.</p>
+                <h1 class="indexHeading">Literary Haven</h1>
+                <p class="indexSlogan2">
+                    All the books you’ll ever want and need.
+                </p>
+            </div>
+        </div>
     </main>
     <footer class="footArea ">
       <div class="container-fluid row">
