--- a/HTML/admin.html
+++ b/HTML/admin.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Literary Haven//Admin Page</title>
+     <!-- Link to FontAwesome to import Icons -->
+     <script src="https://kit.fontawesome.com/83bbb8d075.js" crossorigin="anonymous"></script>
+    
     <!-- Links to Google fonts -->
 
     <!-- Links to Monserrat Font Type -->
@@ -33,27 +36,90 @@
     />
   </head>
   <body>
-    <header></header>
+    <a id="top"></a>
+    <header>
+      <nav class="navbar">
+        <div class="container-fluid">
+          <div class="navImg col-2">
+            <p class="text-center">Literary Haven</p>
+          </div>
+          <div class="navLinks col-8">
+            <p>
+              <a href="/index.html">Home</a>
+            </p>
+            <p>
+              <a href="/HTML/about.html">About</a>
+            </p>
+            <p>
+              <a href="/HTML/product.html">Product</a>
+            </p>
+            <p>
+              <a href="/HTML/admin.html">Admin</a>
+            </p>
+            <p>
+              <a href="/HTML/checkout.html">Checkout</a>
+            </p>
+            <p>
+              <a href="/HTML/contact.html">Contact</a>
+            </p>
+          </div>
+
+          <div class="col-2">
+            <div class="row mb-4">
+              <button>SignIn/LogIn</button>
+            </div>
+            <div class="row">
+              <i
+                class="fa-solid fa-heart-circle-plus fa-2xl text-start"
+                style="color: #ffffff"
+              ></i>
+              <i
+                class="fa-solid fa-cart-shopping fa-2xl text-end"
+                style="color: #ffffff"
+              ></i>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </header>
     <main></main>
-    <footer>
-      <!-- Script tag linking Index script -->
-      <script src="/JavaScript/admin.js"></script>
-      <!-- Bootstrap Script tags -->
-      <script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-        crossorigin="anonymous"
-      ></script>
-      <script
-        src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
-        crossorigin="anonymous"
-      ></script>
-      <script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
-        integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
-        crossorigin="anonymous"
-      ></script>
-    </footer>
+    <footer class="footArea ">
+        <div class="container-fluid row">
+          <div class="col-2 m-auto">
+              <p><div>Developed by </div><div>Seth Tobias &COPY; 2023</div></p>
+              
+          </div>
+          <div class="footerName col-8 text-center m-auto">
+              <h3 class="display-1 ">Literary Haven</h3>
+          </div>
+          <div class="col-1 m-auto">
+              <a href="#top">
+  
+                  <i class="fa-solid fa-angles-up fa-bounce fa-2xl" style="color: #ffffff;"></i>
+              </a>
+          </div>
+        </div>
+      </footer>
+      <footer>
+        <!-- Script tag linking Index script -->
+        <script src="/JavaScript/index.js"></script>
+  
+        <!-- Bootstrap Script tags -->
+        <script
+          src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+          integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+          crossorigin="anonymous"
+        ></script>
+        <script
+          src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+          integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+          crossorigin="anonymous"
+        ></script>
+        <script
+          src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+          integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+          crossorigin="anonymous"
+        ></script>
+      </footer>
   </body>
 </html>
