stagging unfinished team contaent

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -86,7 +86,7 @@
     </header>
     <main>
         <div class="container-fluid">
-            <div class="row text-center col-6 m-auto">
+            <div class="row text-center col-8 m-auto">
                 <h1>Our Story</h1>
                 <p class="storyText">
                     As a small organization we strive to provide all forms of Literacy across the entire globe. We want to enable every young mind with the same opportunity. To encourage the future of tomorrow to learn and grow. To ensure they are provided with opportunities they never thought they would have.
@@ -123,59 +123,58 @@
                     </div>
                 </div>
             </div>
-            <div class="container-fluid">
+            <div class="container-fluid col-8 m-auto">
                 <h2 class="text-center">Meet the team</h2>
                 <p class="text-center">
                     "I alone cannot change the world, but I can cast a stone across the waters to create many ripples." 
                     — Mother Teresa.
                 </p>
-                <div class="row m-auto">
-                    <div class="col-6">
-                        <img src="" alt="">
-                     <div>
-                         <h3></h3>
+                <div class="row col-12 m-auto">
+                    <div class="col-4 m-auto">
+                      <div class="col-4 m-auto">
+                        <img src="https://i.postimg.cc/FRjfYgn1/IMG-20220408-WA0002-2.jpg" alt="" class="teamImg">
+                    </div> 
+                         <h3 class="text-center">Founder</h3>
                          <p></p>
-                     </div> 
-                     </div>
+                      </div>
                 </div>
-                <div class="row m-auto">
+                <div class="row m-auto col-12">
                     <div class="col-4">
-                        <img src="" alt="">
-                     <div>
+                      <div class="col-4 m-auto">
+                        <img src="https://i.postimg.cc/1zjtHZS9/20231009_134048.jpg" alt="" class="teamImg">
+                        </div> 
                          <h3></h3>
                          <p></p>
-                     </div> 
+                     </div>
+                     <div class="col-4 m-auto">
+                       <div class="col-4 m-auto">
+                          <img src="https://i.postimg.cc/JzF43K7J/landing-Pg-Pic.png" alt="" class="teamImg">
+                        </div> 
+                         <h3></h3>
+                         <p></p>
                      </div>
                      <div class="col-4">
-                        <img src="" alt="">
-                     <div>
+                        <img src="https://i.postimg.cc/cCPRG1z8/20231009_134246.jpg" alt="" class="teamImg">
+                      </div> 
+                        <div class="col-4 m-auto">
                          <h3></h3>
                          <p></p>
-                     </div> 
-                     </div>
-                     <div class="col-4">
-                        <img src="" alt="">
-                     <div>
-                         <h3></h3>
-                         <p></p>
-                     </div> 
                      </div>
                 </div>
-                <div class="row m-auto">
-                    <div class="col-6">
-                       <img src="" alt="">
-                    <div>
+                <div class="row m-auto col-12">
+                    <div class="col-4 m-auto">
+                        <img src="https://i.postimg.cc/pLK5kfM1/matthew.png" alt="" class="teamImg">
+                      </div> 
+                    <div class="col-4 m-auto">
                         <h3></h3>
                         <p></p>
-                    </div> 
                     </div>
-                    
                 </div>
             </div>
         </div>
     </main>
-    <footer class="footArea ">
-        <div class="container-fluid row">
+    <footer class="footArea">
+        <div class="container-fluid row m-auto">
           <div class="col-2 m-auto">
               <p><div>Developed by </div><div>Seth Tobias &COPY; 2023</div></p>
               
@@ -185,7 +184,6 @@
           </div>
           <div class="col-1 m-auto">
               <a href="#top">
-  
                   <i class="fa-solid fa-angles-up fa-bounce fa-2xl" style="color: #ffffff;"></i>
               </a>
           </div>
