fixed background, seeting up admin.js

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -37,7 +37,7 @@
       crossorigin="anonymous"
     />
   </head>
-  <body>
+  <body class="mainBackground">
     <a id="top"></a>
     <header>
       <nav class="navbar">
