--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -35,7 +35,7 @@
       crossorigin="anonymous"
     />
   </head>
-  <body>
+  <body class="mainBackground">
     <a id="top"></a>
     <header>
       <nav class="navbar">
@@ -82,7 +82,9 @@
         </div>
       </nav>
     </header>
-    <main></main>
+    <main>
+      
+    </main>
     <footer class="footArea ">
         <div class="container-fluid row">
           <div class="col-2 m-auto">
