--- a/HTML/checkout.html
+++ b/HTML/checkout.html
@@ -35,7 +35,7 @@
       crossorigin="anonymous"
     />
   </head>
-  <body>
+  <body class="mainBackground">
     <a id="top"></a>
     <header>
       <nav class="navbar">
