--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       crossorigin="anonymous"
     />
   </head>
-  <body>
+  <body class="mainBackground">
     <a id="top"></a>
     <header>
       <nav class="navbar">
