local storage set

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -191,7 +191,7 @@
       </footer>
       <footer>
         <!-- Script tag linking Index script -->
-        <script src="/JavaScript/index.js"></script>
+        <script src="/JavaScript/about.js"></script>
   
         <!-- Bootstrap Script tags -->
         <script
