--- a/HTML/admin.html
+++ b/HTML/admin.html
@@ -82,7 +82,9 @@
         </div>
       </nav>
     </header>
-    <main></main>
+    <main>
+      
+    </main>
     <footer class="footArea ">
         <div class="container-fluid row">
           <div class="col-2 m-auto">
@@ -102,7 +104,7 @@
       </footer>
       <footer>
         <!-- Script tag linking Index script -->
-        <script src="/JavaScript/index.js"></script>
+        <script src="/JavaScript/admin.js"></script>
   
         <!-- Bootstrap Script tags -->
         <script
@@ -120,6 +122,11 @@
           integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
           crossorigin="anonymous"
         ></script>
+        <table>
+          <thead></thead>
+          <tbody></tbody>
+          <tfoot></tfoot>
+        </table>
       </footer>
   </body>
 </html>
