--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -104,7 +104,7 @@
       </footer>
       <footer>
         <!-- Script tag linking Index script -->
-        <script src="/JavaScript/index.js"></script>
+        <script src="/JavaScript/contact.js"></script>
   
         <!-- Bootstrap Script tags -->
         <script
