--- a/HTML/product.html
+++ b/HTML/product.html
@@ -102,7 +102,7 @@
       </footer>
       <footer>
         <!-- Script tag linking Index script -->
-        <script src="/JavaScript/index.js"></script>
+        <script src="/JavaScript/product.js"></script>
   
         <!-- Bootstrap Script tags -->
         <script
