--- a/HTML/product.html
+++ b/HTML/product.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Literary Haven//Product Page</title>
+    <!-- UIverse link to loader -->
+    <link rel="stylesheet" href="https://uiverse.io/Nawsome/curly-goose-54">
+
      <!-- Link to FontAwesome to import Icons -->
      <script src="https://kit.fontawesome.com/83bbb8d075.js" crossorigin="anonymous"></script>
     
@@ -82,7 +85,35 @@
         </div>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <table>
+        <thead>
+            <tr  class="tableHeader">
+                <th>ADMIN: CRUD System</th>
+            </tr>
+            <tr>
+                <td>Item ID.</td>
+                <td>Name</td>
+                <td>Volume</td>
+                <td>Author</td>
+                <td>Book Type</td>
+                <td>Genre</td>
+                <td>Synopsis</td>
+                <td>Image</td>
+                <td>Price</td>
+                <td>In Stock</td>
+                <td></td>
+            </tr>
+            </thead>
+            <tbody>
+    </tbody>
+    <tfoot>
+    <tr class='tableFooter'>
+      <td><button class="add">ADD</button></td>
+    </tr>
+      </tfoot>
+    </table>
+    </main>
     <footer class="footArea ">
         <div class="container-fluid row">
           <div class="col-2 m-auto">
@@ -102,7 +133,7 @@
       </footer>
       <footer>
         <!-- Script tag linking Index script -->
-        <script src="/JavaScript/index.js"></script>
+        <script src="/JavaScript/product.js"></script>
   
         <!-- Bootstrap Script tags -->
         <script
