--- a/HTML/admin.html
+++ b/HTML/admin.html
@@ -83,7 +83,33 @@
       </nav>
     </header>
     <main>
-      
+      <table>
+        <thead>
+            <tr  class="tableHeader">
+                <th>ADMIN: CRUD System</th>
+            </tr>
+            <tr>
+                <td>Item ID.</td>
+                <td>Name</td>
+                <td>Volume</td>
+                <td>Author</td>
+                <td>Book Type</td>
+                <td>Genre</td>
+                <td>Synopsis</td>
+                <td>Image</td>
+                <td>Price</td>
+                <td>In Stock</td>
+                <td><button class="deleteAll">Delete All</button></td>
+            </tr>
+            </thead>
+            <tbody>
+            </tbody>
+            <tfoot>
+            <tr class='tableFooter'>
+              <td><button class="add">ADD</button></td>
+            </tr>
+              </tfoot>
+            </table>
     </main>
     <footer class="footArea ">
         <div class="container-fluid row">
