--- a/HTML/product.html
+++ b/HTML/product.html
@@ -120,7 +120,7 @@
           </li>
         </ul>
         </div><span>Loading</span></div>
-    <main>
+    <main style="display: none;">
     </main>
     <footer class="footArea ">
         <div class="container-fluid row">
