--- a/HTML/checkout.html
+++ b/HTML/checkout.html
@@ -35,9 +35,9 @@
       crossorigin="anonymous"
     />
   </head>
-  <body class="mainBackground">
+  <body>
     <a id="top"></a>
-    <header>
+    <header class="sticky-top">
       <nav class="navbar">
         <div class="container-fluid">
           <div class="navImg col-2">
