--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </head>
   <body class="mainBackground">
     <a id="top"></a>
-    <header>
+    <header class="sticky-top">
       <nav class="navbar">
         <div class="container-fluid">
         <div class="navImg col-2">
