--- a/HTML/about.html
+++ b/HTML/about.html
@@ -39,7 +39,7 @@
   </head>
   <body class="mainBackground">
     <a id="top"></a>
-    <header>
+    <header class="sticky-top">
       <nav class="navbar">
         <div class="container-fluid">
           <div class="navImg col-2">
@@ -173,7 +173,7 @@
             </div>
         </div>
     </main>
-    <footer class="footArea">
+    <footer class="footArea bottom-0">
         <div class="container-fluid row m-auto">
           <div class="col-2 m-auto">
               <p><div>Developed by </div><div>Seth Tobias &COPY; 2023</div></p>
