--- a/HTML/admin.html
+++ b/HTML/admin.html
@@ -35,9 +35,9 @@
       crossorigin="anonymous"
     />
   </head>
-  <body class="mainBackground">
+  <body>
     <a id="top"></a>
-    <header>
+    <header class="sticky-top">
       <nav class="navbar">
         <div class="container-fluid">
           <div class="navImg col-2">
@@ -82,35 +82,7 @@
         </div>
       </nav>
     </header>
-    <main>
-      <table>
-        <thead>
-            <tr  class="tableHeader">
-                <th>ADMIN: CRUD System</th>
-            </tr>
-            <tr>
-                <td>Item ID.</td>
-                <td>Name</td>
-                <td>Volume</td>
-                <td>Author</td>
-                <td>Book Type</td>
-                <td>Genre</td>
-                <td>Synopsis</td>
-                <td>Image</td>
-                <td>Price</td>
-                <td>In Stock</td>
-                <td><button class="deleteAll">Delete All</button></td>
-            </tr>
-            </thead>
-            <tbody>
-            </tbody>
-            <tfoot>
-            <tr class='tableFooter'>
-              <td><button class="add">ADD</button></td>
-            </tr>
-              </tfoot>
-            </table>
-    </main>
+    <main></main>
     <footer class="footArea ">
         <div class="container-fluid row">
           <div class="col-2 m-auto">
@@ -148,11 +120,6 @@
           integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
           crossorigin="anonymous"
         ></script>
-        <table>
-          <thead></thead>
-          <tbody></tbody>
-          <tfoot></tfoot>
-        </table>
       </footer>
   </body>
 </html>
