--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -35,9 +35,9 @@
       crossorigin="anonymous"
     />
   </head>
-  <body class="mainBackground">
+  <body>
     <a id="top"></a>
-    <header>
+    <header class="sticky-top">
       <nav class="navbar">
         <div class="container-fluid">
           <div class="navImg col-2">
@@ -82,9 +82,7 @@
         </div>
       </nav>
     </header>
-    <main>
-      
-    </main>
+    <main></main>
     <footer class="footArea ">
         <div class="container-fluid row">
           <div class="col-2 m-auto">
