--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -37,7 +37,7 @@
   </head>
   <body class="mainBackground">
     <a id="top"></a>
-    <header>
+    <header class="sticky-top">
       <nav class="navbar">
         <div class="container-fluid">
           <div class="navImg col-2">
@@ -85,7 +85,7 @@
     <main>
       
     </main>
-    <footer class="footArea ">
+      <footer class="footArea bottom-0">
         <div class="container-fluid row">
           <div class="col-2 m-auto">
               <p><div>Developed by </div><div>Seth Tobias &COPY; 2023</div></p>
