--- a/HTML/admin.html
+++ b/HTML/admin.html
@@ -37,7 +37,7 @@
   </head>
   <body class="mainBackground">
     <a id="top"></a>
-    <header>
+    <header class="sticky-top">
       <nav class="navbar">
         <div class="container-fluid">
           <div class="navImg col-2">
@@ -101,17 +101,17 @@
                 <td>In Stock</td>
                 <td><button class="deleteAll">Delete All</button></td>
             </tr>
-            </thead>
-            <tbody>
-            </tbody>
-            <tfoot>
+          </thead>
+          <tbody>
+          </tbody>
+          <tfoot>
             <tr class='tableFooter'>
               <td><button class="add">ADD</button></td>
             </tr>
-              </tfoot>
-            </table>
+          </tfoot>
+        </table>
     </main>
-    <footer class="footArea ">
+    <footer class="footArea bottom-0">
         <div class="container-fluid row">
           <div class="col-2 m-auto">
               <p><div>Developed by </div><div>Seth Tobias &COPY; 2023</div></p>
