--- a/HTML/product.html
+++ b/HTML/product.html
@@ -40,7 +40,7 @@
   </head>
   <body class="mainBackground">
     <a id="top"></a>
-    <header>
+    <header class="sticky-top">
       <nav class="navbar">
         <div class="container-fluid">
           <div class="navImg col-2">
@@ -120,9 +120,22 @@
           </li>
         </ul>
         </div><span>Loading</span></div>
-    <main style="display: none;">
+    <main style="display: none;" class="m-auto">
+      <div class="mb-5"></div>
+      <div class="row col-8 m-auto mb-5">
+        <div class="col-2">
+          <button class="sort">Sort By Price:</button>
+        </div>
+        <div class="col-8"></div>
+        <div class="col-2">
+          <input type="text" placeholder="Search..." class="search">
+        </div>
+      </div>
+      <div class="mainContent">
+
+      </div>
     </main>
-    <footer class="footArea ">
+      <footer class="footArea bottom-0">
         <div class="container-fluid row">
           <div class="col-2 m-auto">
               <p><div>Developed by </div><div>Seth Tobias &COPY; 2023</div></p>
