cart pushing assigning null value

--- a/HTML/product.html
+++ b/HTML/product.html
@@ -124,7 +124,8 @@
       <div class="mb-5"></div>
       <div class="row col-8 m-auto mb-5">
         <div class="col-2">
-          <button class="sort">Sort By Price:</button>
+          <button class="sortA">Sort By Price: Ascending</button>
+          <button class="sortD">Sort By Price: Descending</button>
         </div>
         <div class="col-8"></div>
         <div class="col-2">
