--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             </div>
         </div>
     </main>
-      <footer class="footArea bottom-0">
+      <footer class="footArea">
       <div class="container-fluid row">
         <div class="col-2 m-auto">
             <p><div>Developed by </div><div>Seth Tobias &COPY; 2023</div></p>
