--- a/HTML/checkout.html
+++ b/HTML/checkout.html
@@ -82,7 +82,9 @@
         </div>
       </nav>
     </header>
-    <main></main>
+    <main>
+      
+    </main>
       <footer class="footArea bottom-0">
         <div class="container-fluid row">
           <div class="col-2 m-auto">
