--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -82,8 +82,36 @@
         </div>
       </nav>
     </header>
-    <main>
-      
+    <mai>
+      <div class="container-fluid col-10 m-auto">
+        <div class="col-5">
+          <form class="mt-5 mb-5">
+            <div class="row">
+              <div class="col mb-4 mt-4">
+                <input type="text" class="form-control" placeholder="Enter First name">
+              </div>
+              <div class="col mb-4 mt-4">
+                <input type="text" class="form-control" placeholder="Enter Last name">
+              </div>
+            </div>
+            <div class="row">
+              <div class="col mb-4 mt-4">
+                <input type="text" class="form-control" placeholder="Enter Email Address">
+              </div>
+            </div>
+            <div class="col mb-4 mt-4">
+            <label for="exampleFormControlTextarea1">Reason</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" cols="1"></textarea>
+          </div>
+          </form>
+        </div>
+        <div class="col-7 m-auto">
+          <div class="row m-auto"> 
+            
+          </div>
+        </div>
+      </div>
+    </div>
     </main>
       <footer class="footArea bottom-0">
         <div class="container-fluid row">
