--- a/HTML/product.html
+++ b/HTML/product.html
@@ -132,7 +132,7 @@
           <input type="text" placeholder="Search..." class="search">
         </div>
       </div>
-      <div class="mainContent">
+      <div class="mainContent gridDisplay">
 
       </div>
     </main>
