--- a/HTML/product.html
+++ b/HTML/product.html
@@ -121,16 +121,19 @@
         </ul>
         </div><span>Loading</span></div>
     <main style="display: none;" class="m-auto">
-      <div class="mb-5"></div>
-      <div class="row col-8 m-auto mb-5">
-        <div class="col-2">
+      <div class="row col-10 m-auto mb-5 mt-5">
+        <div class="col-4 m-auto">
           <button class="sortA">Sort By Price: Ascending</button>
+
           <button class="sortD">Sort By Price: Descending</button>
         </div>
-        <div class="col-8"></div>
-        <div class="col-2">
+       <div class="col"></div>
+        <div class="col-4">
+          <div class="col-2">
           <input type="text" placeholder="Search..." class="search">
         </div>
+        </div>
+        
       </div>
       <div class="mainContent gridDisplay">
 
