--- a/HTML/checkout.html
+++ b/HTML/checkout.html
@@ -83,7 +83,18 @@
       </nav>
     </header>
     <main>
-      
+      <div class="col-8 m-auto">
+        <h1 class="text-start">Cart Items</h1>
+        <div class="row">
+          <ul class="list-unstyled">
+            
+        </ul>
+        <h2 class="text-end">Total Due:<span class="amountDue"> R?</span></h2>
+        </div>
+        <div class="row">
+          <button class="confirm">Confirm Purchase</button>
+      </div>
+      </div>
     </main>
       <footer class="footArea bottom-0">
         <div class="container-fluid row">
